# macho2elf

./: CMakeLists.txt  LICENSE.txt  README.md  lief.cmake
converter/: dwarf2.h  info_print.cpp  main.cpp  str_data.h  translation_helper.cpp  translation_helper.h  unwind_compact_decoder.cpp  unwind_compact_decoder.h  unwind_compact_structures.h  unwind_dwarf.cpp  unwind_dwarf.h  unwind_registers.h  unwind_rewriter.cpp  unwind_rewriter.h
elfio/: elfio.hpp  elfio_segment.hpp
macoscompat/: dyld.cpp  dyld.s  embedded  embedded.asm  fs.cpp  index_allocator.h  main.cpp  math.cpp  translation.txt
macoscompat/locale/: _ctype.h  collate.h  darwin.h  isctype.c  lmessages.h  mblocal.h  nomacros.c  none.c  runetype.h  setlocale.h  table.c  utf8.c  xlocale.c  xlocale.h  xlocale_private.h
